syntax = "proto3";

package heft.v1;

import "google/protobuf/timestamp.proto";
import "heft/v1/common.proto";

// SessionService handles live workout tracking
service SessionService {
  // Start a new workout session
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);

  // Get session details
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // Sync full session state (periodic sync from client)
  rpc SyncSession(SyncSessionRequest) returns (SyncSessionResponse);

  // Finish the workout session
  rpc FinishSession(FinishSessionRequest) returns (FinishSessionResponse);

  // Abandon the workout session
  rpc AbandonSession(AbandonSessionRequest) returns (AbandonSessionResponse);

  // List recent sessions
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
}

// Workout session
message Session {
  string id = 1;
  string user_id = 2;
  string workout_template_id = 3;
  string program_id = 4;
  int32 program_day_number = 5;
  string name = 6;
  WorkoutStatus status = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp completed_at = 9;
  int32 duration_seconds = 10;
  int32 total_sets = 11;
  int32 completed_sets = 12;
  string notes = 13;
  repeated SessionExercise exercises = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}

// Session exercise
message SessionExercise {
  string id = 1;
  string session_id = 2;
  string exercise_id = 3;
  string exercise_name = 4;
  ExerciseType exercise_type = 5;
  int32 display_order = 6;
  string section_name = 7;
  string notes = 8;
  repeated SessionSet sets = 9;
  optional string superset_id = 10;  // Exercises with same ID are in same superset
}

// Session set
message SessionSet {
  string id = 1;
  string session_exercise_id = 2;
  int32 set_number = 3;

  // Actual performance
  optional double weight_kg = 4;
  optional int32 reps = 5;
  optional int32 time_seconds = 6;
  optional double distance_m = 7;

  bool is_bodyweight = 8;
  bool is_completed = 9;
  google.protobuf.Timestamp completed_at = 10;

  // Targets (copied from template)
  optional double target_weight_kg = 11;
  optional int32 target_reps = 12;
  optional int32 target_time_seconds = 13;

  optional double rpe = 14;
  string notes = 15;
}

// Session summary for lists
message SessionSummary {
  string id = 1;
  string user_id = 2;
  string name = 3;
  WorkoutStatus status = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp completed_at = 6;
  int32 duration_seconds = 7;
  int32 total_sets = 8;
  int32 completed_sets = 9;
  string template_name = 10;
}

// StartSession
message StartSessionRequest {
  optional string workout_template_id = 1;
  optional string program_id = 2;
  optional int32 program_day_number = 3;
  optional string name = 4;
}

message StartSessionResponse {
  Session session = 1;
}

// GetSession
message GetSessionRequest {
  string id = 1;
}

message GetSessionResponse {
  Session session = 1;
}

// SyncSession - Periodic full session state sync
message SyncSessionRequest {
  string session_id = 1;
  repeated SyncSetData sets = 2;
  repeated SyncExerciseData exercises = 3;  // For adding new exercises
  repeated string deleted_set_ids = 4;      // IDs of sets to delete
  repeated string deleted_exercise_ids = 5; // IDs of exercises to delete (cascades to sets)
}

message SyncSetData {
  // Either existing set ID or session_exercise_id for new sets
  oneof set_identifier {
    string id = 1;                  // For existing sets - update this set
    string session_exercise_id = 9; // For new sets - create in this exercise
  }
  optional double weight_kg = 2;
  optional int32 reps = 3;
  optional int32 time_seconds = 4;
  optional double distance_m = 5;
  bool is_completed = 6;
  optional double rpe = 7;
  optional string notes = 8;
}

message SyncExerciseData {
  // Either existing session_exercise ID or new exercise details
  oneof exercise_identifier {
    string id = 1;                        // For existing exercises (unused)
    NewExerciseData new_exercise = 2;     // For new exercises
    UpdateExerciseData update_exercise = 3; // For updating existing exercises
  }
}

message UpdateExerciseData {
  string id = 1;                    // Session exercise ID to update
  optional string section_name = 2;
  optional int32 display_order = 3;
  optional string superset_id = 4;  // Empty string = clear superset
}

message NewExerciseData {
  string exercise_id = 1;       // Reference to exercise library
  int32 display_order = 2;
  string section_name = 3;
  int32 num_sets = 4;           // How many empty sets to create (default 3)
  optional string superset_id = 5;   // For adding to existing superset group
}

message SyncSessionResponse {
  Session session = 1;
  bool success = 2;
}

// FinishSession
message FinishSessionRequest {
  string id = 1;
  optional string notes = 2;
}

message FinishSessionResponse {
  Session session = 1;
}

// AbandonSession
message AbandonSessionRequest {
  string id = 1;
}

message AbandonSessionResponse {
  bool success = 1;
}

// ListSessions
message ListSessionsRequest {
  optional WorkoutStatus status = 1;
  optional string start_date = 2; // YYYY-MM-DD
  optional string end_date = 3;   // YYYY-MM-DD
  PaginationRequest pagination = 4;
}

message ListSessionsResponse {
  repeated SessionSummary sessions = 1;
  PaginationResponse pagination = 2;
}
